potwierdzanie zamowienia - zapis do bazy; strona orders\my - stan zamowienia

--- a/README
+++ b/README
@@ -1,11 +1,5 @@
 Projekt aplikacji webowej we frameworku Ruby on Rails.
 
-Projekt jest póki co w powijakach.
-
 Deweloperzy:
-Marcin Kosiñski
+Marcin Kosinski
 Mateusz Radziszewski
-
-test konfliktu
-
-NOWY TEKST
